syntax = "proto3";

package com.example.gateway.domain;

import "com/example/gateway/domain/gatewayDomainObjects.proto";

message DoNothingTwiceEvent {
    DoNothingTwice value = 1;
}